[package]
name = "translator"
version = "0.1.1"
authors = ["Jeremy Mill <jeremymill@gmail.com>"]
description = "A procedural macro which translates your repr-C structs into C++, Python and C# at compile time for helping write FFI libraries"
license = "MIT"
readme = "..\\README.md"
keywords = ["FFI", "struct", "translator", "translate"]
repository = "https://github.com/LivingInSyn/Translator"

[dependencies]
syn = "0.12.12"
quote = "0.3.15"
proc-macro2 = "0.2.2"
lazy_static = "1.0"

[lib]
proc-macro = true